[XR] Add a mock device example using a new mock device package.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "com.unity.xr.arcore": "1.0.0-preview.18",
+    "com.unity.xr.arfoundation": "1.0.0-preview.17",
     "com.unity.xr.arkit": "1.0.0-preview.14",
-    "com.unity.xr.arfoundation": "1.0.0-preview.17"
-  }
+    "com.unity.xr.mock": "0.0.1-preview.3"
+  },
+  "registry": "https://staging-packages.unity.com"
 }
