--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,19 @@
 {
   "dependencies": {
     "com.unity.ads": "2.3.1",
-    "com.unity.analytics": "3.2.2",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.render-pipelines.lightweight": "4.8.0-preview",
-    "com.unity.purchasing": "2.0.3",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.analytics": "3.3.2",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.multiplayer-hlapi": "1.0.2",
+    "com.unity.package-manager-ui": "2.1.2",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.lightweight": "5.6.1",
+    "com.unity.shadergraph": "5.6.1",
+    "com.unity.textmeshpro": "2.0.0",
+    "com.unity.timeline": "1.0.0",
     "com.unity.xr.arcore": "1.0.0-preview.24",
-    "com.unity.xr.arfoundation": "1.0.0-preview.22",
+    "com.unity.xr.arfoundation": "1.1.0-preview.6",
     "com.unity.xr.arkit": "1.0.0-preview.23",
+    "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
