--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.inputsystem": "1.2.0",
+    "com.unity.ide.rider": "3.0.21",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "4.1.7",
-    "com.unity.xr.arfoundation": "4.1.7",
-    "com.unity.xr.arkit": "4.1.7",
-    "com.unity.xr.arkit-face-tracking": "4.1.7",
-    "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
+    "com.unity.xr.arcore": "4.1.13",
+    "com.unity.xr.arfoundation": "4.1.13",
+    "com.unity.xr.arkit": "4.1.13",
+    "com.unity.xr.arkit-face-tracking": "4.1.13",
+    "com.unity.xr.interaction.toolkit": "2.3.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
